--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 26)
 
 add_executable(Ass1Files main.cpp
         cmake-build-debug/AlgoAss.cpp
-        cmake-build-debug/AlgoAss.h)
+        cmake-build-debug/AlgoAss.h
+        DoctorModule.cpp
+        IndexManagers.h)
