--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 26)
 add_executable(Ass1Files main.cpp
         cmake-build-debug/AlgoAss.cpp
         cmake-build-debug/AlgoAss.h
-        IndexManagers.h)
+        IndexManagers.h
+)
